name:                turnstile
version:             0.1.0.0
synopsis:            Functions in context
description:         Please see README.md
homepage:            http://github.com/gambogi/turnstile#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Gambogi
maintainer:          m@gambogi.com
copyright:           2015
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite turnstile-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , turnstile
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gambogi/turnstile
